--- a/OpenDagBackEnd/OpenDagBackEnd/Views/Shared/_Layout.cshtml
+++ b/OpenDagBackEnd/OpenDagBackEnd/Views/Shared/_Layout.cshtml
@@ -84,7 +84,7 @@
                         <ul>
                             <li>@Html.ActionLink("Studies", "Index", "Study")
                                 <ul>
-                                    <li><a href="#">Link</a></li>
+                                    <li>@*<a href="#">Link</a>*@@Html.ActionLink("Create", "Create", "Study")</li>
                                     <li><a href="#">Link</a></li>
                                 </ul>
                             </li>
@@ -102,7 +102,7 @@
                             </li>
                             <li>@Html.ActionLink("Dagprogramma", "Index", "TimeTable")
                                 <ul>
-                                    <li><a href="#">Link</a></li>
+                                    <li>@*<a href="#">Link*@@Html.ActionLink("Activiteiten", "Index", "TimeTableEntry")</a></li>
                                     <li><a href="#">Link</a></li>
                                 </ul>
                             </li>
@@ -119,6 +119,9 @@
            <![endif]-->      
             @RenderSection("featured", required: false)    
             @RenderBody()
+
+            @Scripts.Render("~/bundles/scripts")
+            @RenderSection("scripts", required: false)
         </section>
 
         
