--- a/OpenDagBackEnd/OpenDagBackEnd/Views/StudyInformation/Create.cshtml
+++ b/OpenDagBackEnd/OpenDagBackEnd/Views/StudyInformation/Create.cshtml
@@ -1,51 +1,63 @@
 ﻿@model OpenDagBackEnd.Models.StudyInformation
-
 @{
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<!DOCTYPE html>
 
-@using (Html.BeginForm()) {
-    @Html.ValidationSummary(true)
+<html xmlns="http://www.w3.org/1999/xhtml">
+    
+    <head runat="server">
+        <link rel="stylesheet" type="text/css" href="~/Content/main.css" />
+        <script type="text/javascript">
+            document.write(["\<script type='text/javascript' src='",
+            ("https:" == document.location.protocol) ? "https://" : "http://",
+            "ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js'>\<\/script>"].join(''));
+        </script>
+        <script src="jquery-1.7.1.js"></script>
 
-    <fieldset>
-        <legend>StudyInformation</legend>
+        <title></title>
+    </head>
+    <body>        
+        <div class="form-container clearfix">
+            @Html.ValidationSummary(true)
+            <form method="post">
+                <div class="editor-label">
+                    @Html.LabelFor(model => model.Title)
+                </div>
+                <div class="editor-field">
+                    @Html.EditorFor(model => model.Title)
+                    @Html.ValidationMessageFor(model => model.Title)
+                </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Title)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Title)
-            @Html.ValidationMessageFor(model => model.Title)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Content)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Content)
-            @Html.ValidationMessageFor(model => model.Content)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.StudyId, "Study")
-        </div>
-        <div class="editor-field">
-            @Html.DropDownList("StudyId", String.Empty)
-            @Html.ValidationMessageFor(model => model.StudyId)
-        </div>
-
-        <p>
-            <input type="submit" value="Create" />
-        </p>
-    </fieldset>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+                <div class="editor-label">
+                    @Html.LabelFor(model => model.Content)
+                </div>
+                <div class="editor-field">
+                    @Html.TextAreaFor(model => model.Content,new { id="bb-post-field"})
+                    @Html.ValidationMessageFor(model => model.Content)   
+                </div>
+                <div class="editor-label">
+                    @Html.LabelFor(model => model.StudyId, "Study")
+                </div>
+                <div class="editor-field">
+                    @Html.DropDownList("StudyId", String.Empty)
+                    @Html.ValidationMessageFor(model => model.StudyId)
+                </div>
+                <input type="submit" value="Plaats reactie" />
+             </form>
+            <div class="form-help-panel clearfix">
+                <h3>BB Code</h3>
+                    <button title="Plaatje" id="bb-img">img</button>
+                    <button id="bb-b">b</button>
+                    <button id="bb-i">i</button>
+                    <button id="bb-u">u</button>
+                    <button id="bb-url">url</button>
+                    <button id="bb-list">list</button>
+                    <button id="bb-asterisk">*</button>
+                    <button id="bb-color">color</button>
+                    <button id="bb-quote">quote</button>
+            </div>
+        </div>    
+    </body>
+</html>
