--- a/OpenDagBackEnd/OpenDagBackEnd/Views/Shared/_Layout.cshtml
+++ b/OpenDagBackEnd/OpenDagBackEnd/Views/Shared/_Layout.cshtml
@@ -84,8 +84,8 @@
                         <ul>
                             <li>@Html.ActionLink("Studies", "Index", "Study")
                                 <ul>
-                                    <li>@*<a href="#">Link</a>*@@Html.ActionLink("Create", "Create", "Study")</li>
-                                    <li><a href="#">Link</a></li>
+                                    <li>@*<a href="#">Link</a>*@@Html.ActionLink("Studies", "Index", "Study")</li>
+                                    <li>@*<a href="#">Link</a>*@@Html.ActionLink("Studie Informatie", "Index", "StudyInformation")</li>
                                 </ul>
                             </li>
                             <li><a href="#">Navigatie</a>
@@ -102,8 +102,7 @@
                             </li>
                             <li>@Html.ActionLink("Dagprogramma", "Index", "TimeTable")
                                 <ul>
-                                    <li>@*<a href="#">Link*@@Html.ActionLink("Activiteiten", "Index", "TimeTableEntry")</a></li>
-                                    <li><a href="#">Link</a></li>
+                                    <li>@Html.ActionLink("Activiteiten", "Index", "TimeTableEntry")</li>
                                 </ul>
                             </li>
                         </ul>
@@ -120,7 +119,7 @@
             @RenderSection("featured", required: false)    
             @RenderBody()
 
-            @Scripts.Render("~/bundles/scripts")
+@*            @Scripts.Render("~/bundles/scripts")*@
             @RenderSection("scripts", required: false)
         </section>
 
