Navigation Route and Track

--- a/OpenDagBackEnd/OpenDagBackEnd/Views/Shared/_Layout.cshtml
+++ b/OpenDagBackEnd/OpenDagBackEnd/Views/Shared/_Layout.cshtml
@@ -90,8 +90,8 @@
                             </li>
                             <li><a href="#">Navigatie</a>
                                 <ul>
-                                    <li><a href="#">Link</a></li>
-                                    <li><a href="#">Link</a></li>
+                                    <li>@Html.ActionLink("Route", "Index", "NavigationRoute")</li>
+                                    <li>@Html.ActionLink("Track", "Index", "NavigationTrack")</li>
                                 </ul>
                             </li>
                             <li>@Html.ActionLink("Studiewijzer", "Index", "Survey")
