--- a/OpenDagBackEnd/OpenDagBackEnd/Views/NavigationTrack/Details.cshtml
+++ b/OpenDagBackEnd/OpenDagBackEnd/Views/NavigationTrack/Details.cshtml
@@ -15,6 +15,9 @@
     <div class="display-field">
         @Html.DisplayFor(model => model.Route.Name)
     </div>
+    <div class="display-field">
+        <img src="@Url.Action("getImg", "NavigationTrack", new { id = Model.Id })" />
+    </div>
 </fieldset>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id=Model.Id }) |
